# src/vendors/oasisscan/models/CtxRow.ts
@@ -1,0 +1,93 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Oasisscan API
+ * https://github.com/bitcat365/oasisscan-backend#readme
+ *
+ * The version of the OpenAPI document: 1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface CtxRow
+ */
+export interface CtxRow {
+    /**
+     * 
+     * @type {number}
+     * @memberof CtxRow
+     */
+    amount: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof CtxRow
+     */
+    method: CtxRowMethodEnum;
+    /**
+     * 
+     * @type {string}
+     * @memberof CtxRow
+     */
+    from: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof CtxRow
+     */
+    to: string;
+}
+
+/**
+* @export
+* @enum {string}
+*/
+export enum CtxRowMethodEnum {
+    ConsensusDeposit = 'consensus.Deposit',
+    ConsensusWithdraw = 'consensus.Withdraw',
+    ConsensusAccountsParameters = 'consensus_accounts.Parameters',
+    ConsensusBalance = 'consensus.Balance',
+    ConsensusAccount = 'consensus.Account'
+}
+
+export function CtxRowFromJSON(json: any): CtxRow {
+    return CtxRowFromJSONTyped(json, false);
+}
+
+export function CtxRowFromJSONTyped(json: any, ignoreDiscriminator: boolean): CtxRow {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'amount': json['amount'],
+        'method': json['method'],
+        'from': json['from'],
+        'to': json['to'],
+    };
+}
+
+export function CtxRowToJSON(value?: CtxRow | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'amount': value.amount,
+        'method': value.method,
+        'from': value.from,
+        'to': value.to,
+    };
+}
+
+
