# src/vendors/oasisscan/models/InlineResponse2005.ts
@@ -1,0 +1,72 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Oasisscan API
+ * https://github.com/bitcat365/oasisscan-backend#readme
+ *
+ * The version of the OpenAPI document: 1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import {
+    InlineResponse2005Data,
+    InlineResponse2005DataFromJSON,
+    InlineResponse2005DataFromJSONTyped,
+    InlineResponse2005DataToJSON,
+} from './';
+
+/**
+ * 
+ * @export
+ * @interface InlineResponse2005
+ */
+export interface InlineResponse2005 {
+    /**
+     * 
+     * @type {number}
+     * @memberof InlineResponse2005
+     */
+    code: number;
+    /**
+     * 
+     * @type {InlineResponse2005Data}
+     * @memberof InlineResponse2005
+     */
+    data: InlineResponse2005Data;
+}
+
+export function InlineResponse2005FromJSON(json: any): InlineResponse2005 {
+    return InlineResponse2005FromJSONTyped(json, false);
+}
+
+export function InlineResponse2005FromJSONTyped(json: any, ignoreDiscriminator: boolean): InlineResponse2005 {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'code': json['code'],
+        'data': InlineResponse2005DataFromJSON(json['data']),
+    };
+}
+
+export function InlineResponse2005ToJSON(value?: InlineResponse2005 | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'code': value.code,
+        'data': InlineResponse2005DataToJSON(value.data),
+    };
+}
+
+
